# paper-wallet

./: .gitignore  Dockerfile  README.md  build.sh
dapa-paper-wallet/: Cargo.toml
dapa-paper-wallet/src/: lib.rs
public/: index.html  lang.js
src-tauri/: tauri.conf.json
wallet-core/: Cargo.toml
wallet-core/src/: lib.rs
web-app/: index.html
web-app/js/: app.js
