[package]
name = "dapa-paper-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"
dapa-common = { package = "dapa_common", git = "https://github.com/k7n2g/dapa-blockchain", default-features = false, branch = "main" }
dapa-wallet = { package = "dapa_wallet", git = "https://github.com/k7n2g/dapa-blockchain", default-features = false, branch = "main" }

[lib]
crate-type = ["cdylib", "rlib"]