[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
base58 = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "Window",
]